--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </tr>
   </table>
   <hr>
-  <a href="/Volumes/Expansion/Web Development/HTML - Personal Site/hobbies.html">Hobbies</a>
-  <a href="/Volumes/Expansion/Web Development/HTML - Personal Site/Contacts.html">Contact Me</a>
+  <a href="hobbies.htm">Hobbies</a>
+  <a href="contacts.html">Contact Me</a>
 </body>
 </html>
