UpperCase of a C on contacts.html link ref

--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
   </table>
   <hr>
   <a href="hobbies.htm">Hobbies</a>
-  <a href="contacts.html">Contact Me</a>
+  <a href="Contacts.html">Contact Me</a>
 </body>
 </html>
