fix miss lettre "L"on html ref link: Hobbies

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </tr>
   </table>
   <hr>
-  <a href="hobbies.htm">Hobbies</a>
+  <a href="hobbies.html">Hobbies</a>
   <a href="Contacts.html">Contact Me</a>
 </body>
 </html>
